--- a/index.html
+++ b/index.html
@@ -354,18 +354,34 @@
                  <p>PORTFOLIO</p>
                  <hr>
              </div>
+<!--             연디저트-->
+<!--
              <div class="portfolio2 clear">
                  <div class="portfolio2_1 clear">
-                     <img src="img/monitor.png">
+                     <img src="img/yeon_dessert1.png">
                  </div>
                  <div class="portfolio2_2 clear">
                      <p>웹</p>
-                     <p>프로젝트명 : <span>xx</span></p>
-                     <p>역할 : <span>xx</span></p>
-                     <p>제작 소요기간 : <span>xx</span></p>
-                     <p>지원기기 : <span>xx</span></p>
+                     <p>프로젝트명 : <span>&#60;연디저트&#62; 홈페이지 제작</span></p>
+                     <p>역할 : <span>단독 프로젝트</span></p>
+                     <p>제작 소요기간 : <span>약 2주 소요</span></p>
+                     <p>사용기술 : <span>HTML5, CSS3</span></p>
                  </div>
              </div>
+-->
+             <div class="portfolio2 clear">
+                 <div class="portfolio2_1 clear">
+                     <img src="img/bowraum_1.png">
+                 </div>
+                 <div class="portfolio2_2 clear">
+                     <p>웹</p>
+                     <p>프로젝트명 : <span>&#60;바우라움&#62; 홈페이지 </span></p>
+                     <p>역할 : <span>단독 프로젝트</span></p>
+                     <p>제작 소요기간 : <span>약 2주 소요</span></p>
+                     <p>사용기술 : <span>HTML5, CSS3, javascript</span></p>
+                 </div>
+             </div>
+             
              <div class="portfolio3 clear">
                      <button class="b3_1"></button>
                      <button class="b3_2"></button>
